add struct validation
