# auth/docs/swagger.json
@@ -44,7 +44,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_zednotdead_dinners_auth_internal_server_domain_models.User"
+                            "$ref": "#/definitions/github_com_zednotdead_dinners_auth_internal_domain_models.User"
                         }
                     }
                 }
@@ -78,7 +78,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_zednotdead_dinners_auth_internal_server_domain_models.User"
+                            "$ref": "#/definitions/github_com_zednotdead_dinners_auth_internal_domain_models.User"
                         }
                     }
                 }
@@ -86,7 +86,7 @@
         }
     },
     "definitions": {
-        "github_com_zednotdead_dinners_auth_internal_server_domain_models.Credential": {
+        "github_com_zednotdead_dinners_auth_internal_domain_models.Credential": {
             "type": "object",
             "properties": {
                 "id": {
@@ -100,7 +100,7 @@
                 }
             }
         },
-        "github_com_zednotdead_dinners_auth_internal_server_domain_models.User": {
+        "github_com_zednotdead_dinners_auth_internal_domain_models.User": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -109,7 +109,7 @@
                 "credentials": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_zednotdead_dinners_auth_internal_server_domain_models.Credential"
+                        "$ref": "#/definitions/github_com_zednotdead_dinners_auth_internal_domain_models.Credential"
                     }
                 },
                 "email": {
@@ -125,19 +125,30 @@
         },
         "http.LoginRequest": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "password": {
                     "type": "string",
+                    "minLength": 5,
                     "example": "securepassword"
                 },
                 "username": {
                     "type": "string",
+                    "minLength": 5,
                     "example": "username"
                 }
             }
         },
         "http.RegistrationRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "password",
+                "username"
+            ],
             "properties": {
                 "email": {
                     "type": "string",
@@ -145,10 +156,12 @@
                 },
                 "password": {
                     "type": "string",
+                    "minLength": 5,
                     "example": "securepassword"
                 },
                 "username": {
                     "type": "string",
+                    "minLength": 5,
                     "example": "username"
                 }
             }
