# auth/internal/adapter/handler/http/user.go
@@ -2,9 +2,12 @@ package http
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/zednotdead/dinners/auth/internal/server/domain/models"
+	"github.com/go-playground/validator/v10"
+	"github.com/zednotdead/dinners/auth/internal/domain/models"
 	"github.com/zednotdead/dinners/auth/internal/server/service"
 )
+
+var validate = validator.New()
 
 type UserHandler struct {
 	svc *service.UserService
@@ -17,9 +20,9 @@ func NewUserHandler(svc *service.UserService) *UserHandler {
 }
 
 type RegistrationRequest struct {
-	Username string `json:"username" example:"username"`
-	Email    string `json:"email" example:"username@example.com"`
-	Password string `json:"password" example:"securepassword"`
+	Username string `json:"username" example:"username" validate:"required,min=5"`
+	Email    string `json:"email" example:"username@example.com" validate:"required,email"`
+	Password string `json:"password" example:"securepassword" validate:"required,min=5"`
 }
 
 // Register godoc
@@ -40,6 +43,12 @@ func (uh *UserHandler) Register(ctx *gin.Context) {
 		return
 	}
 
+	err := validate.Struct(registration)
+	if err != nil {
+		ctx.Error(err)
+		return
+	}
+
 	user := models.User{
 		Username: registration.Username,
 		Email:    registration.Email,
@@ -56,8 +65,8 @@ func (uh *UserHandler) Register(ctx *gin.Context) {
 }
 
 type LoginRequest struct {
-	Username string `json:"username" example:"username"`
-	Password string `json:"password" example:"securepassword"`
+	Username string `json:"username" example:"username" validate:"required,min=5"`
+	Password string `json:"password" example:"securepassword" validate:"required,min=5"`
 }
 
 // Login godoc
@@ -73,6 +82,12 @@ type LoginRequest struct {
 func (uh *UserHandler) Login(ctx *gin.Context) {
 	login := new(LoginRequest)
 	if err := ctx.BindJSON(&login); err != nil {
+		ctx.Error(err)
+		return
+	}
+
+	err := validate.Struct(login)
+	if err != nil {
 		ctx.Error(err)
 		return
 	}
